...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_playing_referee"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/playing_team_a_player3_seat"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread" />
...
        android:layout_marginBottom="8dp"
        android:textColor="@color/red_FF001F"
        app:layout_constraintBottom_toTopOf="@+id/btn_gaming_game_over"
        app:layout_constraintEnd_toStartOf="@+id/text_gaming_current_foul_separation"
        app:layout_constraintHorizontal_bias="0.5"
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/team_b_player3_seat"
        app:layout_constraintTop_toBottomOf="@+id/text_gaming_current_foul_team_a" />


    <android.support.constraint.ConstraintLayout
        android:id="@+id/playing_team_a_player1_seat"
        android:layout_width="0dp"
        android:layout_height="0dp"
...
        android:layout_marginTop="8dp"
        android:background="@drawable/outline_team_a_playing_seat"
        app:layout_constraintBottom_toTopOf="@+id/team_b_player1_seat"
        app:layout_constraintEnd_toStartOf="@+id/playing_team_a_player2_seat"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
...

        <Button
            android:id="@+id/btn_playing_team_a_player1_point_plus"
            android:layout_width="25dp"
            android:layout_height="25dp"
...

        <Button
            android:id="@+id/btn_playing_team_a_player1_rebound_plus"
            android:layout_width="25dp"
            android:layout_height="25dp"
...

        <Button
            android:id="@+id/btn_playing_team_a_player1_foul_plus"
            android:layout_width="25dp"
            android:layout_height="25dp"
...

        <Button
            android:id="@+id/btn_playing_team_a_player2_point_plus"
            android:layout_width="25dp"
            android:layout_height="25dp"
...

        <Button
            android:id="@+id/btn_playing_team_a_player2_rebound_plus"
            android:layout_width="25dp"
            android:layout_height="25dp"
...

        <Button
            android:id="@+id/btn_playing_team_a_player2_foul_plus"
            android:layout_width="25dp"
            android:layout_height="25dp"
...

        <Button
            android:id="@+id/btn_playing_team_a_player3_point_plus"
            android:layout_width="25dp"
            android:layout_height="25dp"
...

        <Button
            android:id="@+id/btn_playing_team_a_player3_rebound_plus"
            android:layout_width="25dp"
            android:layout_height="25dp"
...

        <Button
            android:id="@+id/btn_playing_team_a_player3_foul_plus"
            android:layout_width="25dp"
            android:layout_height="25dp"
...

        <Button
            android:id="@+id/btn_playing_team_b_player1_point_plus"
            android:layout_width="25dp"
            android:layout_height="25dp"
...

    <android.support.constraint.ConstraintLayout
        android:id="@+id/team_b_player2_seat"
        android:layout_width="0dp"
        android:layout_height="0dp"
...

        <Button
            android:id="@+id/btn_playing_team_b_player2_point_plus"
            android:layout_width="25dp"
            android:layout_height="25dp"
...

        <Button
            android:id="@+id/btn_playing_team_b_player2_rebound_plus"
            android:layout_width="25dp"
            android:layout_height="25dp"
...

        <Button
            android:id="@+id/btn_playing_team_b_player2_foul_plus"
            android:layout_width="25dp"
            android:layout_height="25dp"
...

        <Button
            android:id="@+id/btn_playing_team_b_player3_point_plus"
            android:layout_width="25dp"
            android:layout_height="25dp"
...
