...
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e0ffffff"
    android:id="@+id/fragment_want2_create_room">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_toolbar"
        android:background="@drawable/border_want2create_room_top_bar"
...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/stalinist_one"
            android:gravity="center"
            android:letterSpacing="0.15"
            android:text="創建房間"
            android:textColor="@color/black_3f3a3a"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
...
        android:text="@string/referee_or_not"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_want2create_location_title" />

    <EditText
        android:id="@+id/edit_want2create_room_name_content"
        android:layout_width="0dp"
        android:layout_height="@dimen/height_payment_editor"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/edit_room_name"
        android:imeOptions="actionNext"
...
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/radios_referee_selector"
        app:layout_constraintStart_toStartOf="@+id/text_want2create_referee_title"
        app:layout_constraintTop_toBottomOf="@+id/radios_referee_selector" />

    <Button
        android:id="@+id/btn_want2create_build_confirm"
        style="@style/CreateUserBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/btn_effect_custom"
...
