<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_waiting4join_master"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e0ffffff"
    android:orientation="horizontal">

    /* ------------------------------------------------------------------------------------------ */
...
        android:id="@+id/waiting_team_a_player3_seat"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/outline_team_a_waiting_seat"
        app:layout_constraintBottom_toBottomOf="@+id/waiting_team_a_player2_seat"
        app:layout_constraintEnd_toStartOf="@+id/waiting_referee_seat"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/waiting_team_a_player2_seat"
        app:layout_constraintTop_toTopOf="@+id/waiting_team_a_player2_seat">

        <ImageView
            android:id="@+id/waiting_team_a_player3_avatar"
...
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/waiting_referee_gender"
            app:layout_constraintTop_toTopOf="@+id/waiting_referee_gender"
            app:srcCompat="@drawable/ic_position_referee" />

        <Button
            android:id="@+id/btn_waiting_referee_change_seat"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="@null"
            android:drawableTop="@drawable/button_effect_change_seats"
            android:text="@string/change_seat"
...
        app:layout_constraintEnd_toEndOf="@+id/radios_timer_selector"
        app:layout_constraintStart_toStartOf="@+id/radios_timer_selector"
        app:layout_constraintTop_toBottomOf="@+id/radios_timer_selector" />


    <Button
        android:id="@+id/btn_waiting4join_start"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_effect_start"
...
