...
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@null"
    android:id="@+id/fragment_home_rooms">

    <ProgressBar
        android:id="@+id/progressBar_looking4room"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
        android:background="@drawable/background_effect_btn_find_host"
        android:fontFamily="@font/noto_sans"
        android:text="篩選場地"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_home_rooms_find_host"
        app:layout_constraintEnd_toStartOf="@+id/btn_home_rooms_build"
        app:layout_constraintStart_toEndOf="@+id/btn_home_rooms_find_host"
        app:layout_constraintTop_toTopOf="@+id/btn_home_rooms_find_host" />

    <Button
        android:id="@+id/btn_home_rooms_build"
        android:layout_width="0dp"
...
